(lang dune 2.0)

(name "re_typescript")

(version 0.0.1)

(maintainers "Jonathan Siebern")

(authors "Jonathan Siebern")

(source
 (github jsiebern/re-typescript))

(homepage https://jsiebern.github.io/re-typescript/)

(documentation https://github.com/jsiebern/re-typescript)

(generate_opam_files true)

(using menhir 2.0)

(formatting
 (enabled_for reason ocaml))
