(ocamllex
 (modules lexer))

; Compile tokens.mly into a definition of the type [token].

(menhir
 (modules parser_tokens)
 (flags --only-tokens))

; Compile parser.mly into a parser.

(menhir
 (modules parser_new parser_tokens)
 (merge_into parser_new)
 (flags --external-tokens Parser_tokens --unused-tokens))

(library
 (name re_typescript_base)
 (public_name re_typescript.base)
 (libraries file-context-printer.lib pastel.lib console.lib containers)
 (ocamlopt_flags (-linkall)))
