(library
 (name re_typescript_config)
 (public_name re_typescript.config)
 (libraries biniou atdgen yojson re_typescript.base))

(rule
 (targets config_t.ml config_t.mli)
 (deps config.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets config_j.ml config_j.mli)
 (deps config.atd)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets bridge_t.ml bridge_t.mli)
 (deps bridge.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets bridge_j.ml bridge_j.mli)
 (deps bridge.atd)
 (action
  (run atdgen -j -j-std %{deps})))
