(library
 (name re_typescript_config)
 (public_name re_typescript.config)
 (libraries biniou atdgen yojson))

(rule
 (targets config_t.ml config_t.mli config_j.ml config_j.mli)
 (deps config.atd)
 (action
  (progn
   (run atdgen -t %{deps})
   (run atdgen -j -j-std %{deps}))))

(rule
 (targets bridge_t.ml bridge_t.mli bridge_j.ml bridge_j.mli)
 (deps bridge.atd)
 (action
  (progn
   (run atdgen -t %{deps})
   (run atdgen -j -j-std %{deps}))))

(rule
 (targets parse_info_t.ml parse_info_t.mli parse_info_j.ml parse_info_j.mli)
 (deps parse_info.atd)
 (action
  (progn
   (run atdgen -t %{deps})
   (run atdgen -j -j-std %{deps}))))
