(executable
 (name re_typescript_js)
 (libraries re_typescript.base re_typescript.printer re_typescript.fs
   file-context-printer.lib console.lib pastel.lib js_of_ocaml containers
   re_typescript.config fp)
 (preprocess
  (pps js_of_ocaml-ppx))
 (modes js))

(rule
 (target examples.re)
 (deps
  (:folder
   (source_tree examples))
  (:script
   (file generate_examples.js)))
 (action
  (run node %{script})))
