(library
 (name re_typescript_ts_parser)
 (public_name re_typescript.ts_parser)
 (libraries re_typescript.config re_typescript.base re_typescript.printer
   re_typescript.ts_parser_bin containers iter yojson console.lib pastel.lib))

(env
 (dev
  (flags
   (:standard -w -30))))

(rule
 (targets typescript_t.ml typescript_t.mli typescript_j.ml typescript_j.mli)
 (deps typescript.atd)
 (action
  (progn
   (run atdgen -t %{deps})
   (run atdgen -j -j-std %{deps}))))
