(library
 (name re_typescript_test_lib)
 (js_of_ocaml)
 (public_name re_typescript.test_lib)
 (ocamlopt_flags -linkall -g)
 (libraries reason rely.lib console.lib containers re_typescript.lib)
 (modules
  (:standard \ RunTests))
 (preprocess
  (pps js_of_ocaml-ppx)))

(executable
 (js_of_ocaml)
 (name RunTests)
 (libraries re_typescript.test_lib)
 (modules RunTests)
 (modes js)
 (preprocess
  (pps js_of_ocaml-ppx)))
